<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6BFCD4B2"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_nom"
        android:layout_width="330dp"
        android:layout_height="49dp"
        android:layout_marginTop="56dp"
        android:autofillHints=""
        android:backgroundTint="@color/loginButtonBG"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHighlight="#4FFFFFFF"
        android:textCursorDrawable="@color/loginButtonBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="#DCE9AA74"
        android:gravity="center_horizontal|center_vertical"
        android:paddingLeft="15dp"
        android:paddingTop="3dp"
        android:paddingRight="15dp"
        android:paddingBottom="3dp"
        android:text="@string/enter_the_details_for_social_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="italic"
        android:visibility="visible"
        app:autoSizeTextType="none"
        app:fontFamily="serif"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txt_telefono"
        android:layout_width="330dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:backgroundTint="@color/loginButtonBG"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="phone"
        android:textColor="#000000"
        android:textColorHighlight="#4FFFFFFF"
        android:textCursorDrawable="@color/loginButtonBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nom"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="330dp"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/loginButtonBG"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHighlight="#4FFFFFFF"
        android:textCursorDrawable="@color/loginButtonBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_telefono"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/signUpButtonId"
        android:layout_width="96dp"
        android:layout_height="45dp"
        android:layout_marginTop="36dp"
        android:background="#FF8E01"
        android:onClick="clickBtn_Guardar"
        android:text="@string/signUp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pass" />

    <EditText
        android:id="@+id/txt_pass"
        android:layout_width="330dp"
        android:layout_height="47dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="@color/loginButtonBG"
        android:ems="10"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHighlight="#4FFFFFFF"
        android:textCursorDrawable="@color/loginButtonBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>